--- a/futuro rico media query/css/style.css
+++ b/futuro rico media query/css/style.css
@@ -167,7 +167,7 @@
 }
 
 #index-bg{
-    background-image: url('/img/background/banco-green.svg');
+    background-image: url('/img/background/index.svg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
@@ -176,6 +176,13 @@
 
 }
 
+.banner-bg-simulador{
+    background-image: url('/img/background/simulador.svg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 100%;
+}
 
 
 
@@ -228,6 +235,7 @@
     font-size: 24px;
     margin-left: 5%;
     font-weight: bold;
+    display: block;
 }
 
 .display-2{
@@ -290,11 +298,12 @@
 }
 
 #resultado{
-    padding-bottom: 20%;
+    padding-bottom: 5%;
 }
 #titulo-simulador{
     color: #31ee50;
-    padding-bottom: 1%;
+    margin-bottom: 5%;
+
 }
 
 #calculator {
@@ -384,7 +393,7 @@
     cursor: pointer;
 }
 
-#p-lucrop, #p-lucrotd{
+#p-lucrop, #p-lucrotd, #p-lucrocdi, #p-lucrolca{
     color: #31ee50;
 
 }
@@ -399,7 +408,27 @@
     
 }
 
-#download{
+.img-pessoas{
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+    justify-content: center;
+    display: flex;
+}
+
+.img-fluid {
+    border-radius: 50%;
+    width: 30%;
     margin-left: 5%;
+}
+#section-pessoas .display-2, p .lead-pessoas, img{
+    display: flex;
+    justify-content: center;
+    margin-right: 5%;
+    margin-left: 5%;
+}
+
+section{
     padding-bottom: 5%;
 }
